<resources>
    <string name="app_name">WikiBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="collection_string">Collection</string>
    <string name="add_book_string">Create a book</string>
    <string name="filter_list_string">Filters</string>
    <string name="create_filter_string">Create a book filter</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- To See -->
    <string name="new_gender">Add your new gender here</string>
    <string name="book_img">Cover</string>
    <string name="title_activity_create_book">CreateBookActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_edit_book_activity">EditActivity</string>
    <string name="BookCreator">Create a book</string>
    <string name="BookFilterCreator">Create a book filter</string>
    <string name="collection">Display my collection</string>
    <string name="filters">Display my filters</string>

    <string name="title_activity_edit_book_filter">EditBookFilterActivity</string>

    <string name="name">Filter Name</string>
    <string name="title">Title</string>
    <string name="author">Author(s)</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="isbn">ISBN</string>

    <string name="u_name">Unknown Name</string>
    <string name="u_title">Unknown Title</string>
    <string name="u_author">Unknown Author</string>
    <string name="u_genre">Unknown Genre</string>
    <string name="u_year">Unknown Year</string>
    <string name="u_description">Unknown Description</string>
    <string name="u_isbn">Unknown ISBN</string>

    <string name="hintName">Put the filter name here</string>
    <string name="hintTitle">Put the title here</string>
    <string name="hintAuthor">Put the author here</string>
    <string name="hintGenre">Put the genre here</string>
    <string name="hintYear">Put the year here</string>
    <string name="hintDescription">Put the description here</string>
    <string name="hintIsbn">Put the title isbn</string>
    <string name="TakeAPicture">Take a picture</string>
    <string name="CreateBook">Create the book</string>
    <string name="EditBook">Edit the book</string>
    <string name="BookCreated">Your book has been created</string>
    <string name="CreateBookFilter">Create the book filter</string>
    <string name="EditBookFilter">Edit the book filter</string>
    <string name="BookFilterCreated">Your book filter has been created</string>
    <string name="title_activity_action_bar">ActionBar</string>
    <string name="title_activity_action_bar_book">ActionBarBook</string>
    <string name="title_activity_create_book_filter">CreateBookFilterActivity</string>
    <string name="title_activity_book_filter_catalog">BookFilterCatalogActivity</string>
    <string name="title_activity_filtred_collection">FiltredCollectionActivity</string>
    <string name="title_activity_filtred_book_collection">FiltredBookCollectionActivity</string>
    <string name="title_activity_book_detail">BookDetail</string>
    <string name="title_activity_formation_camera">FormationCameraActivity</string>
</resources>
