<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/collection"
            android:checked="false"
            android:icon="@drawable/ic_library_books_black"
            android:title="@string/collection_string" />

        <item
            android:id="@+id/add_book"
            android:checked="false"
            android:icon="@drawable/ic_library_add_black"
            android:title="@string/add_book_string" />

        <item
            android:id="@+id/filter_list"
            android:checked="false"
            android:icon="@drawable/ic_filter_list_black"
            android:title="@string/filter_list_string" />

        <item
            android:id="@+id/create_filter"
            android:checked="false"
            android:icon="@drawable/ic_bookmark_border_black"
            android:title="@string/create_filter_string" />

    </group>
</menu>